--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/maxmaccari/lescone/issues"
   },
-  "homepage": "https://github.com/maxmaccari/lescone#readme"
+  "homepage": "https://github.com/maxmaccari/lescone#readme",
+  "devDependencies": {
+    "gulp": "^4.0.1",
+    "gulp-sass": "^4.0.2",
+    "sass": "^1.19.0"
+  }
 }
