--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/maxmaccari/lescone#readme",
   "devDependencies": {
     "gulp": "^4.0.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-sass": "^4.0.2",
     "sass": "^1.19.0"
   }
