--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A example project created on CSS com SASS course by Origamid.",
   "main": "index.html",
   "scripts": {
+    "start": "npm run dev",
+    "build": "gulp build",
+    "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
