--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.1",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
     "sass": "^1.19.0"
   }
