--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
+    "gulp-sass-lint": "^1.4.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.19.0",
     "tar": ">=4.4.2"
@@ -52,5 +53,7 @@
       "window": "readonly"
     }
   },
-  "eslintIgnore": ["gulpfile.js"]
+  "eslintIgnore": [
+    "gulpfile.js"
+  ]
 }
