--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run dev",
     "build": "gulp build",
+    "lint": "gulp lint",
     "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
