--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -11,3 +11,5 @@ rules:
   no-qualifying-elements:
     allow-element-with-attribute: true
   force-attribute-nesting: 0
+  no-url-protocols: 0
+  no-url-domains: 0
