--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.19.0",
     "tar": ">=4.4.2"
   }
