--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   },
   "homepage": "https://github.com/maxmaccari/lescone#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.1",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-babel": "^8.0.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
